fix: Complete Hugo site structure to resolve Netlify 404 error
- Added all missing Hugo directories (content, layouts, data)
- Created complete homepage with layouts and templates
- Added blog posts, courses, resources, and testimonials content
- Added static assets (CSS, JS, images)
- Removed theme dependency from config.toml
- Site now builds successfully with 'hugo --gc --minify'
- Ready for Netlify deployment

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Content Manager - UPSC Vision Prep</title>
+  <link rel="icon" type="image/png" href="/images/favicon.png" />
 </head>
 <body>
+  <!-- Include the script that builds the page and powers Decap CMS -->
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
 </body>
 </html>
